moved nutrition facts to dedicated field
