# openapi.yaml
@@ -80,22 +80,130 @@ paths:
                   items:
                     type: string
                   description: Category labels for the product
-                calories:
-                  type: number
-                  minimum: 0
-                  description: Calories per unit
-                protein:
-                  type: number
-                  minimum: 0
-                  description: Protein grams per unit
-                fat:
-                  type: number
-                  minimum: 0
-                  description: Fat grams per unit
-                carbs:
-                  type: number
-                  minimum: 0
-                  description: Carbohydrate grams per unit
+                nutrition:
+                  type: object
+                  description: Per-unit nutrition facts
+                  properties:
+                    calories:
+                      type: number
+                      minimum: 0
+                      description: Energy in kcal per unit
+                    protein:
+                      type: number
+                      minimum: 0
+                      description: Protein (g)
+                    fat:
+                      type: number
+                      minimum: 0
+                      description: Fat (g)
+                    carbs:
+                      type: number
+                      minimum: 0
+                      description: Carbohydrates (g)
+                    fiber:
+                      type: number
+                      minimum: 0
+                      description: Fiber (g)
+                    sugars:
+                      type: number
+                      minimum: 0
+                      description: Sugars (g)
+                    saturated_fat:
+                      type: number
+                      minimum: 0
+                      description: Saturated fat (g)
+                    trans_fat:
+                      type: number
+                      minimum: 0
+                      description: Trans fat (g)
+                    cholesterol_mg:
+                      type: number
+                      minimum: 0
+                      description: Cholesterol (mg)
+                    sodium_mg:
+                      type: number
+                      minimum: 0
+                      description: Sodium (mg)
+                    potassium_mg:
+                      type: number
+                      minimum: 0
+                      description: Potassium (mg)
+                    calcium_mg:
+                      type: number
+                      minimum: 0
+                      description: Calcium (mg)
+                    iron_mg:
+                      type: number
+                      minimum: 0
+                      description: Iron (mg)
+                    magnesium_mg:
+                      type: number
+                      minimum: 0
+                      description: Magnesium (mg)
+                    phosphorus_mg:
+                      type: number
+                      minimum: 0
+                      description: Phosphorus (mg)
+                    zinc_mg:
+                      type: number
+                      minimum: 0
+                      description: Zinc (mg)
+                    selenium_mcg:
+                      type: number
+                      minimum: 0
+                      description: Selenium (mcg)
+                    copper_mg:
+                      type: number
+                      minimum: 0
+                      description: Copper (mg)
+                    manganese_mg:
+                      type: number
+                      minimum: 0
+                      description: Manganese (mg)
+                    vitamin_a_mcg:
+                      type: number
+                      minimum: 0
+                      description: Vitamin A (mcg RAE)
+                    vitamin_c_mg:
+                      type: number
+                      minimum: 0
+                      description: Vitamin C (mg)
+                    vitamin_d_mcg:
+                      type: number
+                      minimum: 0
+                      description: Vitamin D (mcg)
+                    vitamin_e_mg:
+                      type: number
+                      minimum: 0
+                      description: Vitamin E (mg)
+                    vitamin_k_mcg:
+                      type: number
+                      minimum: 0
+                      description: Vitamin K (mcg)
+                    thiamin_mg:
+                      type: number
+                      minimum: 0
+                      description: Thiamin B1 (mg)
+                    riboflavin_mg:
+                      type: number
+                      minimum: 0
+                      description: Riboflavin B2 (mg)
+                    niacin_mg:
+                      type: number
+                      minimum: 0
+                      description: Niacin B3 (mg)
+                    vitamin_b6_mg:
+                      type: number
+                      minimum: 0
+                      description: Vitamin B6 (mg)
+                    folate_mcg:
+                      type: number
+                      minimum: 0
+                      description: Folate (mcg DFE)
+                    vitamin_b12_mcg:
+                      type: number
+                      minimum: 0
+                      description: Vitamin B12 (mcg)
       responses:
         '201':
           description: Created
